--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "proto"]
 	path = proto
-	url = git@github.com:Bluzelle/swarmdb
+	url = https://github.com/bluzelle/swarmdb
+	branch = devel
